[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Gui/OptionMenu/OptionMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menu/BoxMenu/BoxMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resource/Theme/BoxMenu.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Font/HollowFont-regular, bold, italic.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Items:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Items:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.28, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[node name="OptionMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -51.5
margin_right = 74.5
margin_bottom = 51.5
script = ExtResource( 1 )

[node name="NinePatchRect" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -50.0
margin_right = 75.0
margin_bottom = 50.0
rect_scale = Vector2( 1, 1e-05 )
rect_pivot_offset = Vector2( 75, 50 )

[node name="Items" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -1.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="Items"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_top = 2.5
margin_right = 26.0
margin_bottom = 39.5
custom_fonts/font = SubResource( 13 )
text = "Option
"

[node name="HBoxContainer" type="HBoxContainer" parent="Items"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -101.5
margin_top = -27.5
margin_right = -8.5
margin_bottom = -7.5

[node name="ResetButton" type="Button" parent="Items/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
text = "Reset"

[node name="SaveButton" type="Button" parent="Items/HBoxContainer"]
margin_left = 36.0
margin_right = 64.0
margin_bottom = 20.0
text = "Save"

[node name="ExitButton" type="Button" parent="Items/HBoxContainer"]
margin_left = 68.0
margin_right = 93.0
margin_bottom = 20.0
text = "Exit"

[node name="GridContainer" type="GridContainer" parent="Items"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -18.0
margin_right = 52.5
margin_bottom = 18.0
columns = 2

[node name="SfxLabel" type="Label" parent="Items/GridContainer"]
margin_top = 1.0
margin_right = 33.0
margin_bottom = 14.0
text = "Sfx"

[node name="SfxSlider" type="HSlider" parent="Items/GridContainer"]
margin_left = 37.0
margin_right = 105.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="MusicLabel" type="Label" parent="Items/GridContainer"]
margin_top = 21.0
margin_right = 33.0
margin_bottom = 34.0
text = "Music"

[node name="MusicLabel2" type="HSlider" parent="Items/GridContainer"]
margin_left = 37.0
margin_top = 20.0
margin_right = 105.0
margin_bottom = 36.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 2 )
anims/open = SubResource( 1 )

[connection signal="pressed" from="Items/HBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Items/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Items/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
